# pyllm-utilities

./: .gitignore  README.md  TODO.md  app.py  pyproject.toml
.claude/: session-export-2025-10-09.md
.github/: CLAUDE.md
content_scheduler/: CHANGELOG.md  PLAN_DE_IMPLEMENTACION.md  README.md  pyproject.toml
content_scheduler/.github/: CLAUDE.md  GEMINI.md
content_scheduler/src/content_scheduler/: auth.py  config.py  logging_config.py  scheduler.py  uploader.py
fast-pycaptioner/: README.md  main.py  pyproject.toml  requirements.txt  traductor_bidireccional.py
fast-pycaptioner/scripts/: install.sh  verify.sh
image-generation/: README.md  image-gen.py  pyproject.toml
media-detail-extractor/: .env.example  CHANGELOG.md  README.md  media-detailer.py  pyproject.toml
media-stitcher/: MainDraft-Idea.md  README.md  main.py  pyproject.toml  pytest.ini  test_flujo_completo.py  test_funciones.py  test_gpu_progress.py
media-stitcher/.github/: CLAUDE.md
media-stitcher/media_stitcher/: __init__.py  cli.py  core.py  utils.py
media-stitcher/tests/: __init__.py  test_core.py
project-correlations/: analyze_project.py  find_synergies.py  implementation_planner.py  pyproject.toml  smart_synergy_analyzer.py
scripts/: CAPTIVE_PORTAL_SETUP.md  HOTFIX_STRATEGY.md  app_debug.py  display_original.html  network_diagnostic.py  qr_original.html  script_3.sh  script_4.sh  script_5.sh  script_6.sh  script_7.sh  script_v2.sh  setup-captive-portal.sh  simple_hotspot.sh  upload-bkup-20251022.html  upload-failed-attempt2-fixed2-20251022.html  upload2.html  upload_original.html
scripts/hotfixes/: app-corregido-1.py  app-fixed-1.py  app-fixed-3.py  upload-fixed-1.html  upload-fixed-3.html  upload-primerui-mejorado.html
templates/: display.html  qr.html  upload.html
tts-py/: .gitignore  CHANGELOG.md  README.md  README.old.md  TODO.md  main.py  project-description.md  pyproject.toml  recursos-chatterbox.md  test_chatterbox.py  test_simple.py
tts-py/.github/: CLAUDE.md
tts-py/audio-samples/: README.md
tts-py/creative-scripts/: README.md  ejemplo.txt
