[project]
name = "media-stitcher"
version = "0.3.0"
description = "Wrapper de FFmpeg para post-producción de videos con soporte GPU, CLI y funciones avanzadas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
media-stitcher = "media_stitcher.cli:main"
