[project]
name = "tts-py"
version = "0.3.0"
description = "Utilidad CLI para síntesis de voz con clonación basada en referencia usando Chatterbox TTS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chatterbox-tts>=0.1.3",
    "nltk>=3.9.2",
    "onnx>=1.19.1",
]

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]
